# gmerlin-encoders

./: Makefile.am  configure.ac
include/: Makefile.am  bgflac.h  bgshout.h  config.h.in  config.h.in~  gmerlin_encoders.h  vorbiscomment.h
lib/: Makefile.am  bgflac.c  bgshout.c  id3v1.c  vorbiscomment.c
m4/: check_funcs.m4
plugins/: Makefile.am
plugins/faac/: Makefile.am  c_faac.c  e_faac.c  faac_codec.c  faac_codec.h
plugins/ffmpeg/: Makefile.am  _codec_plugin.c  _e_ffmpeg.c  _e_ffmpeg_audio.c  _e_ffmpeg_video.c  c_ffmpeg_ac3.c  c_ffmpeg_alaw.c  c_ffmpeg_jpeg.c  c_ffmpeg_mp2.c  c_ffmpeg_mpeg1.c  c_ffmpeg_mpeg2.c  c_ffmpeg_mpeg4.c  c_ffmpeg_tga.c  c_ffmpeg_ulaw.c  c_ffmpeg_vp8.c  c_ffmpeg_x264.c  codec.c  codecs.c  e_ac3.c  e_adts.c  e_aiff.c  e_asf.c  e_au.c  e_avi.c  e_dvd.c  e_ffmpeg.c  e_ffmpeg_audio.c  e_ffmpeg_video.c  e_matroska.c  e_mp2.c  e_mp4.c  e_mpeg.c  e_mpeg1video.c  e_mpeg2video.c  e_mpegts.c  e_rtp.c  e_vob.c  e_webm.c  e_wma.c  ffmpeg_common.c  (+2 more)
plugins/flac/: Makefile.am  e_flac.c
plugins/lame/: Makefile.am  b_lame.c  bglame.c  bglame.h  c_lame.c  e_lame.c  xing.c  xing.h
plugins/ogg/: Makefile.am  _codec_plugin.c  b_ogg.c  c_flacenc.c  c_opusenc.c  c_theoraenc.c  c_vorbisenc.c  e_oggvideo.c  e_opus.c  e_vorbis.c  flac.c  ogg_common.c  ogg_common.h  opus.c  schroedinger.c  speex.c  theora.c  vorbis.c
plugins/yuv4mpeg/: Makefile.am  e_mpeg.c  e_mpegaudio.c  e_mpegvideo.c  e_yuv4mpeg.c  mpa_common.c  mpv_common.c  y4m_common.c
po/: POTFILES.in  de.gmo  de.po
utils/: cpuinfo.c
